<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    style="@style/NaiBG"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout"
    tools:context=".nuevosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titulo1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/imagen1"
                        android:text="Futuros Quiz"
                        android:textColor="@color/lavender"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:padding="8dp" />

                    <ImageView
                        android:id="@+id/imagen1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/panes_img"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:contentDescription="@string/next_paness" />



                    <TextView
                        style="@style/Nai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_panes"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />

                    <TextView
                        style="@style/Nai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descripcion_panes"
                        android:layout_marginTop="8dp" />

                    <ImageView
                        android:id="@+id/imagen2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/frutass_img"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/nextt_frutas" />

                    <TextView
                        style="@style/Nai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_frutas"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />

                    <TextView
                        style="@style/Nai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/next_frutas"
                        android:layout_marginTop="8dp" />

                    <ImageView
                        android:id="@+id/imagen3"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/animales_img"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/next_aniamales" />

                    <TextView
                        style="@style/Nai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_aninales"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />

                    <TextView
                        style="@style/Nai"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descricion_animales"
                        android:layout_marginTop="8dp" />



                </LinearLayout>

            </ScrollView>


        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">

        <include
            layout="@layout/nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>