<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/NaiBG"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imagen1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/dbz"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:contentDescription="@string/ctd_dragon" />

                    <Button
                        android:id="@+id/boton1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn1_main"
                        android:layout_marginTop="8dp" />

                    <ImageView
                        android:id="@+id/imagen2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/unicornio_img"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/cnt_unicornios" />

                    <Button
                        android:id="@+id/boton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn2_main"
                        android:layout_marginTop="8dp" />

                    <ImageView
                        android:id="@+id/imagen3"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/princesas"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/cnt_princesa" />

                    <Button
                        android:id="@+id/boton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn2_main"
                        android:layout_marginTop="8dp" />

                    <ImageView
                        android:id="@+id/imagen4"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/comida_img"
                        android:scaleType="fitCenter"
                        android:adjustViewBounds="true"
                        android:padding="8dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/cnt_comida" />

                    <Button
                        android:id="@+id/boton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn2_main"
                        android:layout_marginTop="8dp" />

                </LinearLayout>

            </ScrollView>


        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">

        <include
            layout="@layout/nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>
